# everlasting

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  STRUCTURE.md  THIRD_PARTY_LICENSES.md
.everlasting/agents/: spec-auditor.md
.trellis/: .template-hashes.json
.trellis/reviews/: DEBT.md  README.md  SPEC-DRIFT.md
.trellis/spec/archive/: implementation-inception-2026-06-04-to-05.md
.trellis/spec/backend/: agent-loop-architecture.md  database-guidelines.md  error-handling.md  git-diff.md  index.md  latency-tracking.md  llm-contract.md  memory.md  multi-provider-contract.md  permission-layer.md  project-cwd-boundary.md  subagent-runs-schema.md  test-model-contract.md  token-usage-tracking.md  tool-contract.md  worktree-contract.md
.trellis/spec/frontend/: chat.md  cjk-fonts.md  design-tokens.md  index.md  memory-ui.md  popover-pattern.md  reka-ui-usage.md  state-management.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  debt-status-evolution-guide.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-05-3b-1-follow-up/: task.json
.trellis/tasks/06-05-handoff-claude-md/: prd.md  task.json
.trellis/tasks/06-05-tabs-ui-3b-1/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-05-thinking/: implement.jsonl  task.json
.trellis/tasks/06-06-pr1-minor-ui-tweaks/: task.json
.trellis/tasks/06-06-pr2-git-branch/: task.json
.trellis/tasks/06-06-pr3-pwd-tilde/: task.json
.trellis/tasks/06-06-pr4-write-tracing/: task.json
.trellis/tasks/06-06-pr5-cancel-mechanism/: task.json
.trellis/tasks/06-06-pr6-markdown-render/: task.json
.trellis/tasks/06-06-spike-005-follow-up/: prd.md  task.json
.trellis/tasks/06-07-6-ui-bug-markdown-sse/: check.jsonl  task.json
.trellis/tasks/06-09-06-09-06-08-multi-model-pr5-ux-followup-settingsbar-chatinput-model-popover/: prd.md  task.json
.trellis/tasks/06-10-v2-roadmap-and-vision-consolidation/: implement.jsonl  task.json
app/: .gitignore  README.md  dev.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
app/scripts/: subset-font.mjs
app/src/: App.vue  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: crypto.rs  db.rs  files.rs  lib.rs  main.rs  resource_loader.rs  state.rs
app/src-tauri/src/agent/: at_file.rs  auto_reflect.rs  behavior_prompt.rs  chat.rs  chat_loop.rs  context.rs  helpers.rs  loop_detection.rs  memory_hygiene.rs  memory_recall.rs  mod.rs  provider.rs  question_store.rs  subagent.rs  system_prompt.rs  tests.rs  tests_agent_loop.rs  tests_ask_user_question.rs  tests_cancellation.rs  tests_common.rs  tests_envelope.rs  tests_prompts.rs  tests_subagent.rs  thinking.rs
app/src-tauri/src/agent/permissions/: ask.rs  audit.rs  check.rs  dangerous.rs  mod.rs  mode.rs  payload.rs  run_grant.rs  sensitive.rs  shell_trust.rs  store.rs  tests_ask.rs  tests_audit.rs  tests_check.rs  tests_common.rs  tests_mode.rs  tests_payload.rs  tests_run_grant.rs  tests_store.rs  tests_types.rs  types.rs
app/src-tauri/src/agent/subagent/: dispatch.rs  loader.rs  mod.rs  sink.rs  transcript.rs  truncate_summary.rs
app/src-tauri/src/background_shell/: in_memory.rs  mod.rs
app/src-tauri/src/commands/: cancel.rs  command_palette.rs  config.rs  files.rs  memory.rs  mod.rs  panel.rs  permissions.rs  projects.rs  providers.rs  question.rs  sessions.rs  subagent_runs.rs  worktree.rs
app/src-tauri/src/db/: config.rs  memories.rs  memories_tests.rs  messages_tests.rs  migrations.rs  mod.rs  models.rs  permissions.rs  permissions_tests.rs  projects.rs  projects_tests.rs  providers.rs  providers_tests.rs  sessions.rs  sessions_tests.rs  subagent_runs.rs  subagent_runs_tests.rs  tests.rs  types.rs
app/src-tauri/src/git/: diff.rs  error.rs  mod.rs  worktree.rs
app/src-tauri/src/llm/: client.rs  error.rs  mod.rs  sse.rs  types.rs
app/src-tauri/src/llm/provider/: anthropic.rs  mock.rs  mod.rs  openai.rs  wire.rs
app/src-tauri/src/memory/: file.rs  loader.rs  mod.rs  tests.rs  tokens.rs  types.rs  watcher.rs
app/src-tauri/src/projects/: boundary.rs  detector.rs  mod.rs  store.rs  types.rs
app/src-tauri/src/skill/: loader.rs  mod.rs
app/src-tauri/src/tools/: ask_user_question.rs  discard_worker.rs  edit_file.rs  glob.rs  grep.rs  list_dir.rs  merge_worker.rs  mod.rs  read_file.rs  read_guard.rs  remember.rs  run_background_shell.rs  shell.rs  shell_kill.rs  shell_status.rs  update_checklist.rs  use_skill.rs  use_ui.rs  web_fetch.rs  write_file.rs
docs/: ARCHITECTURE.md  BACKLOG.md  CONTEXT.md  DEBUG_DB.md  DESIGN.md  HACKING-llm.md  HACKING-markdown.md  HACKING-wsl.md  HANDOFF.md  IMPLEMENTATION.md  PROPOSAL-project-binding-and-top-tabs.md  README.md  ROADMAP.md  SESSION-FIRST-MESSAGE-INTERFACE.md  TECH.md  prompt.md  subagent-loader.md  system-prompt-research.md
docs/_archive/: 2026-06-04-roadmap-restructure.md  README.md  backlog-appendix-A.md
docs/_deprecated/: README.md  REVIEW-sse-agent-loop-2026-06-12.md  REVIEW-tool-comparison-2026-06-12.md
docs/_reviews/: FINDINGS-b5-cache-wire-validation.md  PR3-SMOKE-TEST.md  README.md  REVIEW-a2-b7-permission-mode-plan-2026-06-13.md  REVIEW-agent-loop-full-audit-2026-06-14.md  REVIEW-b5-memory-grill-2026-06-10.md  REVIEW-claude-opus-2026-06-09.md  REVIEW-deepseek-v4-pro.md  REVIEW-glm-5.1.md  REVIEW-l3d-subagent-loader-deepseek-v4-pro.md  b6-subagent-assessment.md  b6-subagent-prd-review.md
docs/research/: at-file-injection-coding-agents-survey.md  langgraph-send-primitive-survey.md  skill-system-survey.md  subagent-communication-survey.md  subagent-scheduling-communication-survey.md  system-prompt-research.md
docs/review/: b6-subagent-assessment.md
docs/spikes/: 001-wsl-tauri-window.md  002-reqwest-anthropic-sse.md  003-ui-reference-prompts.md  004-wslg-drag-verification.md  005-agent-memory.md  006-agent-autonomous-memory.md  007-agent-autonomous-memory-plan.md  2026-06-06-bug-report.md  2026-06-06-feature-requests.md  2026-06-19-async-parallel-tool-independent-research.md  2026-06-19-async-parallel-tool-research.md
(+897 files in other folders)
