[package]
name = "everlasting"
version = "0.1.0"
description = "Everlasting - Vibe Coding Workbench"
authors = ["Carlos"]
edition = "2021"

[lib]
name = "everlasting_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LLM client
reqwest = { version = "0.13", features = ["stream", "json", "rustls"], default-features = false }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "process", "fs"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
async-stream = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Persistence (step 3a)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-os = "2.3.2"

# Tooling (toolset extension: edit_file / grep / glob / list_dir)
globset = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Step 4: Git worktree isolation
# `vendored-libgit2` pulls a C libgit2 build into the binary, so the
# runtime doesn't depend on a system-installed `libgit2`. First build
# pays ~30-90s compiling the C source; subsequent builds use cargo's
# incremental cache and sccache if configured.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# B5 Memory (V2 first-tier, 2026-06-10; mtime fence 2026-06-15):
# - `tiktoken-rs` for cl100k_base token estimation (4 files * <2K each
#   in 200K context — estimation is good enough; not exact per-model).
# - `dirs` 5.x to resolve `~/.config/everlasting/` cross-platform.
# (notify was removed: freshness is now an mtime fence in
# load_for_session, not a background watcher.)
tiktoken-rs = "0.6"
dirs = "5"

# P1 web_fetch (2026-06-12):
# - `htmd` 0.5 for HTML→Markdown conversion. Leanest deps of the
#   surveyed crates (~3 direct, ~33 transitive), Apache-2.0, passes
#   the full turndown.js test corpus. See
#   `.trellis/tasks/06-12-feat-tools-web-fetch-agent-api-p1/research/html-to-markdown-rust.md`.
htmd = "0.5"

# A2 + B7 (Permission system + per-session Mode, 2026-06-13):
# - `libc` for the `geteuid()` root check (Unix) + `#[cfg]` branch
#   for Windows. Avoids pulling the full `nix` crate for one call.
# - `regex` 1.x for the Tier 2 hard kill list patterns in
#   `agent/permissions/dangerous.rs`. Compile-time regex is not
#   needed (the patterns are runtime constants); std + this
#   dep is plenty.
libc = "0.2"
regex = "1"

[dev-dependencies]
tempfile = "3"
# Mock HTTP server for `web_fetch` integration tests. Spin up a
# localhost mock at runtime; assert on the request the tool sent
# (URL, headers, redirect chain, etc.) and serve canned responses.
httpmock = "0.7"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
