[package]
name = "everlasting"
version = "0.1.0"
description = "Everlasting - Vibe Coding Workbench"
authors = ["Carlos"]
edition = "2021"

[lib]
name = "everlasting_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LLM client
# gzip/brotli/deflate: auto-decompress response bodies. Without these
# (plus the matching `.gzip(true)` etc. on the ClientBuilder) we send
# `Accept-Encoding: gzip, br, deflate` but never decode the result —
# the raw compressed bytes then fail `from_utf8` ("non-utf8 html body
# ... invalid utf-8 sequence ... from index 1" = the gzip magic 1f 8b).
reqwest = { version = "0.13", features = ["stream", "json", "rustls", "gzip", "brotli", "deflate"], default-features = false }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "process", "fs"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
async-stream = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Persistence (step 3a)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-os = "2.3.2"

# Tooling (toolset extension: edit_file / grep / glob / list_dir)
globset = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Step 4: Git worktree isolation
# `vendored-libgit2` pulls a C libgit2 build into the binary, so the
# runtime doesn't depend on a system-installed `libgit2`. First build
# pays ~30-90s compiling the C source; subsequent builds use cargo's
# incremental cache and sccache if configured.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# B5 Memory (V2 first-tier, 2026-06-10; mtime fence 2026-06-15):
# - `tiktoken-rs` for cl100k_base token estimation (4 files * <2K each
#   in 200K context — estimation is good enough; not exact per-model).
# - `dirs` 5.x to resolve `~/.config/everlasting/` cross-platform.
# (notify was removed: freshness is now an mtime fence in
# load_for_session, not a background watcher.)
tiktoken-rs = "0.6"
dirs = "5"

# P1 web_fetch (2026-06-12):
# - `htmd` 0.5 for HTML→Markdown conversion. Leanest deps of the
#   surveyed crates (~3 direct, ~33 transitive), Apache-2.0, passes
#   the full turndown.js test corpus. See
#   `.trellis/tasks/06-12-feat-tools-web-fetch-agent-api-p1/research/html-to-markdown-rust.md`.
htmd = "0.5"

# A2 + B7 (Permission system + per-session Mode, 2026-06-13):
# - `libc` for the `geteuid()` root check (Unix) + `#[cfg]` branch
#   for Windows. Avoids pulling the full `nix` crate for one call.
# - `regex` 1.x for the Tier 2 hard kill list patterns in
#   `agent/permissions/dangerous.rs`. Compile-time regex is not
#   needed (the patterns are runtime constants); std + this
#   dep is plenty.
libc = "0.2"
regex = "1"

# RULE-D-001 (P1 API key 加密, 2026-06-24): AES-256-GCM + HKDF(machine-id).
# 见 .trellis/tasks/06-24-p1-api-key-encryption/research/app-layer-encryption-rust.md
# - aes-gcm 0.10: RustCrypto AEAD, aead/rand_core trait re-export, OsRng 走
#   getrandom(WSL 原生可用). 不单列 aead/rand_core/getrandom(由 aes-gcm re-export).
# - hkdf 0.12 + sha2 0.10: 从 machine-id 派生 32B master key (Hkdf<Sha256>).
# - machine-uid 0.6: 跨平台取 /etc/machine-id / IOPlatformUUID / MachineGuid.
# - base64 0.22: blob(VERSION||nonce||ct||tag) ↔ SQLite TEXT 编码.
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
machine-uid = "0.6"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
# Mock HTTP server for `web_fetch` integration tests. Spin up a
# localhost mock at runtime; assert on the request the tool sent
# (URL, headers, redirect chain, etc.) and serve canned responses.
httpmock = "0.7"
# Pure-Rust gzip encoder for the `web_fetch` "server returns gzip"
# integration test (reqwest auto-decompresses; we have to *produce*
# a valid gzip body on the mock side to exercise that path). Uses
# the miniz_oxide backend — no C dependency.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
